[project]
name = "rl-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.3.0",
    "yfinance>=0.2.0",
    "pandas-ta>=0.3.14b0",
    "scikit-learn>=1.3.0",
    "hmmlearn>=0.3.0",
]
